# Games

./: .gitignore  CMakeLists.txt  README.md  README_PL.md
src/BaseGame/: CMakeLists.txt  Card.hpp  ComparableCard.hpp  Currency.cpp  Currency.hpp  Deck.hpp  Dice.cpp  Dice.hpp  Game.hpp  Player.hpp  StandardCard.cpp  StandardCard.hpp  StandardDeck.cpp  StandardDeck.hpp
src/PigDices/: CMakeLists.txt  PigDicesGame.cpp  PigDicesGame.hpp  PigDicesPlayer.hpp
src/PigDices_interface/: CMakeLists.txt  main.cpp
src/Poker/: CMakeLists.txt  PokerGame.cpp  PokerGame.hpp  PokerPlayer.cpp  PokerPlayer.hpp  PokerTurn.cpp  PokerTurn.hpp
src/Poker_interface/: CMakeLists.txt  main.cpp
src/War/: CMakeLists.txt  WarDeck.cpp  WarDeck.hpp  WarGame.cpp  WarGame.hpp  WarPlayer.cpp  WarPlayer.hpp
src/War_interface/: CMakeLists.txt  main.cpp
tests/basetests/: CMakeLists.txt  test_Currency.cpp  test_Dice.cpp  test_StandardCard.cpp  test_StandardDeck.cpp
tests/dicestests/: CMakeLists.txt  test_PigDicesGame.cpp  test_PigDicesPlayer.cpp
tests/pokertests/: CMakeLists.txt  test_PokerGame.cpp  test_PokerPlayer.cpp  test_PokerTurn.cpp
tests/wartests/: CMakeLists.txt  test_WarDeck.cpp  test_WarGame.cpp  test_WarPlayer.cpp
